# TRIA-API

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  logit.py  main.py
src/chuva/: config.py  modelos.py  router.py
src/chuva/arquivos/: 1547079.csv  2244107.csv  3051043.csv  9999999.csv
src/chuva/logica/: diaria.py
src/chuva/rotas/: diaria.py
