[project]
name = "TRIA-API"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rodrigo-Caldas", email = "rodrigocaldas@id.uff.br"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2", "pydantic-settings>=2.9.1", "mangum>=0.19.0", "pandas>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]
